# android_kernel_motorola_sm6475-modules

./: AndroidKernelModule.mk
drivers/uwb/qm358/: Android.mk  BUILD.bazel  Kbuild
drivers/uwb/qm358/drivers/base/: Kbuild
drivers/uwb/qm358/drivers/base/qm/: Kbuild  qm35.h  qm35_bypass.c  qm35_bypass.h  qm35_bypass_trc.h  qm35_core.c  qm35_core.h  qm35_coredump.c  qm35_coredump.h  qm35_ids.c  qm35_ids.h  qm35_logs.c  qm35_logs.h  qm35_notifier.c  qm35_notifier.h  qm35_notifier_trc.h  qm35_transport.c  qm35_transport.h  qm35_transport_trc.h  qm35_trc.c  qm35_trc.h  qm35_uci_dev.h  qm35_uci_dev_ioctl.h  qm35_uci_dev_main.c  qm35_uci_dev_trc.c  qm35_uci_dev_trc.h
drivers/uwb/qm358/drivers/spi/qm/: Kbuild  qm35_hsspi.c  qm35_hsspi.h  qm35_spi.h  qm35_spi_fw.c  qm35_spi_fw.h  qm35_spi_main.c  qm35_spi_pm.c  qm35_spi_pm.h  qm35_spi_setup.c  qm35_spi_setup.h  qm35_spi_thread.c  qm35_spi_thread.h  qm35_spi_transport.c  qm35_spi_transport.h  qm35_spi_trc.c  qm35_spi_trc.h  qm35_uci_probe.c  qm35_uci_probe.h  qmrom_wrapper.c
drivers/uwb/qm358/include/: kunit_run.h  qblk.h  qerr.h  qlog.h  qmalloc.h  qmutex.h  qobpack.h  qsemaphore.h  qtils.h  qtime.h  qtime_impl.h  qtypes.h
drivers/uwb/qm358/include/log/: qorvo_log.h
drivers/uwb/qm358/include/quwbs/: config.h  err.h  msg.h  quwbs.h
drivers/uwb/qm358/include/uci/: uci.h  uci_compat.h  uci_message.h  uci_qlog.h  uci_spec_fira.h  uci_spec_mcps.h  uci_spec_qorvo.h
drivers/uwb/qm358/include/uwbmac/: uwbmac.h  uwbmac_buf.h  uwbmac_buf_skb.h  uwbmac_msg.h  uwbmac_parser.h  uwbmac_types.h  uwbmac_uci.h  uwbmac_writer.h
(+137 files in other folders)
