# SPDX-License-Identifier: GPL-2.0-or-later
load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "qm35_spi",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "**/Kbuild",
    ]),
    outs = [
        "drivers/base/qm/qm35_apis.ko",
        "drivers/base/qm/qm35_coredump.ko",
        "drivers/base/qm/qm35_logs.ko",
        "drivers/base/qm/qm35_uci_dev.ko",
        "drivers/spi/qm/qm35_spi.ko",
        "drivers/spi/spi-geni-qcom-lowlatency.ko",
    ],
    kernel_build = "//common:db845c-qm35",
    visibility = [
        "//visibility:public"
    ],
)

kernel_module(
    name = "qm35_mini_spi",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "**/Kbuild",
    ]),
    outs = [
        "drivers/base/qm/qm35_apis.ko",
        "drivers/base/qm/qm35_coredump.ko",
        "drivers/base/qm/qm35_logs.ko",
        "drivers/base/qm/qm35_uci_dev.ko",
        "drivers/spi/qm/qm35_spi.ko",
        "drivers/spi/spi-geni-qcom-lowlatency.ko",
    ],
    kernel_build = "//common:db845c-qm35-mini",
    visibility = [
        "//visibility:public"
    ],
)
